welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
		return
                ^Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
		gauche();
                      ^